# P3

./: .replit  design_guidelines.md  package-lock.json  package.json  pyproject.toml  replit.md  run_flask.py  start_flask.sh
attached_assets/: Pasted--A-URL-do-seu-backend-Flask-No-Replit-geralmente-a-mesm_1765451684688.txt  Pasted--Objetivo-da-Miss-o-A-EcoRide-uma-startup-de-aluguel-de_1765450803378.txt  Pasted-from-flask-import-Flask-jsonify-request-from-flask-cors_1765451490818.txt
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: app-sidebar.tsx  battery-indicator.tsx  battery-update-dialog.tsx  metrics-cards.tsx  rent-scooter-dialog.tsx  scooter-form.tsx  scooter-list.tsx  status-badge.tsx  trip-list.tsx
client/src/hooks/: use-websocket.ts
client/src/pages/: dashboard.tsx  manutencao.tsx  viagens.tsx
public/: index.html  script.js  style.css
server/: index.ts  routes.ts  storage.ts  websocket.ts
server_python/: airtable_service.py  app.py  models.py
server_python/static/: script.js  style.css
shared/: schema.ts
